fix styling of summary to prevent overflow

--- a/src/components/userView/budgetBoard.css
+++ b/src/components/userView/budgetBoard.css
@@ -1,3 +1,3 @@
 .budgetBoard {
-/*	min-height: 100vh;*/
+	height: 100%;
 }
