--- a/src/components/userView/userHome.css
+++ b/src/components/userView/userHome.css
@@ -1,5 +1,5 @@
 .userHome {
-	height: 100vh;
+/*	height: 100vh;*/
 	margin-top: 5rem;
 	padding-top: 5rem;
 	padding-left: 1rem;
